; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/vmw_pvrdma/extr_pvrdma_qp.c_get_cqs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/vmw_pvrdma/extr_pvrdma_qp.c_get_cqs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pvrdma_qp = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }
%struct.pvrdma_cq = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pvrdma_qp*, %struct.pvrdma_cq**, %struct.pvrdma_cq**)* @get_cqs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_cqs(%struct.pvrdma_qp* %0, %struct.pvrdma_cq** %1, %struct.pvrdma_cq** %2) #0 {
  %4 = alloca %struct.pvrdma_qp*, align 8
  %5 = alloca %struct.pvrdma_cq**, align 8
  %6 = alloca %struct.pvrdma_cq**, align 8
  store %struct.pvrdma_qp* %0, %struct.pvrdma_qp** %4, align 8
  store %struct.pvrdma_cq** %1, %struct.pvrdma_cq*** %5, align 8
  store %struct.pvrdma_cq** %2, %struct.pvrdma_cq*** %6, align 8
  %7 = load %struct.pvrdma_qp*, %struct.pvrdma_qp** %4, align 8
  %8 = getelementptr inbounds %struct.pvrdma_qp, %struct.pvrdma_qp* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.pvrdma_cq* @to_vcq(i32 %10)
  %12 = load %struct.pvrdma_cq**, %struct.pvrdma_cq*** %5, align 8
  store %struct.pvrdma_cq* %11, %struct.pvrdma_cq** %12, align 8
  %13 = load %struct.pvrdma_qp*, %struct.pvrdma_qp** %4, align 8
  %14 = getelementptr inbounds %struct.pvrdma_qp, %struct.pvrdma_qp* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call %struct.pvrdma_cq* @to_vcq(i32 %16)
  %18 = load %struct.pvrdma_cq**, %struct.pvrdma_cq*** %6, align 8
  store %struct.pvrdma_cq* %17, %struct.pvrdma_cq** %18, align 8
  ret void
}

declare dso_local %struct.pvrdma_cq* @to_vcq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
